# rust-admin2-backend

./: Cargo.toml  README.md  nginx.conf  start.sh
public/: index.html  net-army.d  net-army.js  net-army.wasm  pkg
public/_static/css/: style.css
public/_static/layui/lay/modules/: layer.js
src/: lib.rs  main.rs
src/common/: crypt.rs  mod.rs
src/layouts/: mod.rs
src/pages/: mod.rs
src/pages/admins/: admin_logs.rs  admin_menus.rs  admin_roles.rs  admins.rs  mod.rs
src/pages/finances/: account_changes.rs  mod.rs  recharges.rs  withdraws.rs
src/pages/index/: header.rs  index.rs  login.rs  menus.rs  mod.rs  right.rs
src/pages/systems/: banks.rs  cities.rs  districts.rs  mod.rs  provinces.rs
src/pages/users/: index.rs  mod.rs  user_accounts.rs  user_cards.rs  user_details.rs  users.rs
src/templates/layouts/: default.html
src/templates/pages/admins/: admin_logs.html  admin_menus.html  admin_roles.html  admins.html
src/templates/pages/finances/: account_changes.html  recharges.html  withdraws.html
src/templates/pages/index/: _header.html  _menus.html  login.html  main.html  right.html
src/templates/pages/systems/: banks.html  cities.html  districts.html  provinces.html
src/templates/pages/users/: index.html  user_accounts.html  user_cards.html  user_details.html  users.html
