[package]
name = "backend-wasm"
version = "0.1.0"
authors = ["Yun Liu <haha@live.cn>"]
edition = "2018"
repository = "https://github.com/houhanting/army-backend.git"
description = "后台管理系统"
license = "GNU General Public License v2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
#wee_alloc = "0.4"
serde_derive = "1.0"
serde = "1.0"
serde_json = "1.0"
futures = "0.3"
anyhow = "1.0"
short-crypt = "1.0.15"
lucky = { path = "../common" }
#chrono = "0.4"

[dependencies.yew]
version = "0.16"

[dependencies.wasm-bindgen]
version = "0.2"

[dependencies.web-sys]
version = "0.3"
features = ["Request", "Response", "Window"]

[dependencies.wasm-bindgen-futures]
version = "0.4"

[dependencies.js-sys]
version = "0.3"

